Completed Fractional Knapsack v0.0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,7 @@
         "*.tcc": "cpp",
         "cinttypes": "cpp",
         "hashtable": "cpp",
-        "cassert": "cpp"
+        "cassert": "cpp",
+        "__memory": "cpp"
     }
 }
