Completed Fractional Knapsack v 1.0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,7 @@
         "cinttypes": "cpp",
         "hashtable": "cpp",
         "cassert": "cpp",
-        "__memory": "cpp"
+        "__memory": "cpp",
+        "__functional_03": "cpp"
     }
 }
